<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutDetallesLocalizacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Azul_osc"
    tools:context=".ui.Localizaciones.DetalleLocalizacionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.LightDark.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Azul_osc"
            app:popupTheme="@style/TAppTheme.LightDark.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/textViewTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="-1"
        android:textColor="@color/white_50"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image2"
        app:layout_constraintStart_toEndOf="@+id/image2"
        app:layout_constraintTop_toTopOf="@+id/image2" />

    <TextView
        android:id="@+id/textViewUbicacion"
        android:layout_width="221dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:text="Not Found"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewTemperatura"
        app:layout_constraintTop_toTopOf="@+id/textViewTemperatura" />

    <TextView
        android:id="@+id/textViewDescD"
        android:layout_width="180dp"
        android:layout_height="24dp"
        android:text="Not found"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/textViewUbicacion" />

    <TextView
        android:id="@+id/textViewTemperaturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="--º / --º"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textViewDescD"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescD" />

    <TextView
        android:id="@+id/textViewSensTermica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="Sensación Térmica:"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatura" />

    <TextView
        android:id="@+id/textViewHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:text="Humedad:"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSensTermica" />

    <TextView
        android:id="@+id/textViewViento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="9dp"
        android:text="Viento:"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumedad" />

    <TextView
        android:id="@+id/textViewSensTermP"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="--"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSensTermica"
        app:layout_constraintStart_toEndOf="@+id/textViewSensTermica"
        app:layout_constraintTop_toTopOf="@+id/textViewSensTermica"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewHumedadP"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="--"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHumedad"
        app:layout_constraintStart_toEndOf="@+id/textViewHumedad"
        app:layout_constraintTop_toTopOf="@+id/textViewHumedad"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewVientoP"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:text="--"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textViewViento"
        app:layout_constraintStart_toEndOf="@+id/textViewViento"
        app:layout_constraintTop_toTopOf="@+id/textViewViento"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="79dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/inubes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>