<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/localizaciones"
        android:orderInCategory="100"
        android:title="TODO"
        android:icon="@drawable/icon_localizaciones"
        app:showAsAction="always"/>
    <item
        android:id="@+id/cerrarSesion"
        android:orderInCategory="100"
        android:title="TODO"
        android:icon="@drawable/ic_cerrar_sesion"
        app:showAsAction="always"/>
</menu>